Fix: list-item alignment

--- a/src/components/nel-list-item/nel-list-item.css
+++ b/src/components/nel-list-item/nel-list-item.css
@@ -21,7 +21,7 @@
   align-items: center;
   display: flex;
   flex-flow: row nowrap;
-  justify-content: center;
+  justify-content: flex-start;
   margin: 1px
 }
 
